@@ -48,6 +48,9 @@
           - some API doc improvements
           - get rid of the word 'engine', as it usually carries no relevant
             information
+        - IO
+          - minor speed-up: do not .Trim() lines before checking whether they
+            are empty
 	- misc
           - move GridSearch to experimental section
           - add Nelder-Mead algorithm for hyperparameter selection; currently
